base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapps
  labels:
    name: webapps
---
apiVersion: v1
kind: Namespace
metadata:
  name: database
  labels:
    name: database
